--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-ref
+
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+    <head>
+        <meta charset="utf-8">
+        <titel>Het eerste begin</titel>
+    </head>
+    <body>
+        hier komt mijn eerste tekst
+    </body>
+</html>
+
+
+    
+
+    
+
+
+
+
+
+
+
+
+  
