--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <titel>Het eerste begin</titel>
     </head>
     <body>
-        hier komt mijn eerste tekst
+        <div id="main "style="background-image: url('auto.webp');">
+
+        <p>
+            hier komt mijn eerste tekst
+        </p>
+        </div>
     </body>
 </html>
 
