--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
         <p>
             hier komt mijn eerste tekst
+        </br>
+        </br>
+        </br>
+            meet tekst
         </p>
         </div>
     </body>
