--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <meta charset="utf-8">
         <titel>Het eerste begin</titel>
     </head>
-    <body>
-        <div id="main "style="background-image: url('auto.webp');">
-
+    <body "style="background-image: url('auto.webp');">
+        <div id="main >
         <p>
             hier komt mijn eerste tekst
         </br>
