--- a/index.html
+++ b/index.html
@@ -3,31 +3,107 @@
 <html> <!--dit is het html-element-->
     <head>
         <meta charset="utf-8">
-        <titel>Het eerste begin</titel>
+        <link rel="stylesheet" href="style/style.css">
     </head>
-    <body style="background-image: url('auto.webp');">
-        <div id="main" >
-        <p>
-            hier komt mijn eerste tekst
-        </br>
-        </br>
-        </br>
-            meet tekst
-        </p>
-        </div>
+    <body class="hero-image" >
+		<h1>Top 5 Sportcars 2024</h1>
+		<p class="spacer">
+		</p>
+        <h1>1. McLaren 750S:
+		<br>
+		made in 2023</h1>
+		<p>
+		   <a href="pagina2.html">
+           <img class="page-image" src="resources/auto2.webp" alt="McLaren 750s">
+		   </a>
+		</p> 
     </body>
-</html>
+	<p class="spacer2">
+	</p>
+	<h1>2. Porsche 911 GT3 RS <br> Made in 2003</h1>
+	<p>
+		   <a href="pagina3.html">
+           <img class="page-image" src="resources/auto3.webp" alt="Porsche GT3 RS">
+		   </a>
+		</p>
+<p class="spacer3">
+	</p>		
+	<h1>3. Lamborghini Revuelto <br> Made in 2024</h1>
+	<p>
+		   <a href="pagina4.html">
+           <img class="page-image" src="resources/auto4.webp" alt="lamborghini revuelto">
+		   </a>
+		</p> 
+<p class="spacer4">
+	</p>		
+	<h1>4. Ferrari SF90<br> Made in 2019</h1>
+	<p>
+		   <a href="pagina5.html">
+           <img class="page-image" src="resources/auto5.webp" alt="lamborghini revuelto">
+		   </a>
+		   <p class="spacer4">
+	</p>		
+	<h1>5. Maserati MC20<br> Made in 2020</h1>
+	<p>
+	<a href="pagina6.html">
+           <img class="page-image" src="resources/auto8.webp" alt="lamborghini revuelto">
+		   </a>
+		   <p>
+		   <a href="pagina7.html"><h6>Portifolio</h6>
+		   </a>
+		   </p>
+    </a>
+<br>
+<br>
+<br>
+<h1>write a comment</h1
+<div class="container">
+  <form action="action_page.php">
 
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-    
+    <label for="country">Continent</label>
+    <select id="country" name="country">
+	  <option value="africa">Africa</option>
+	  <option value="antarctica">Antarctica</option>
+      <option value="asia">Asia</option>
+      <option value="europe">Europe</option>
+	  <option value="north america">North America</option>
+	  <option value="south-america">South-America</option>
+      <option value="oceania">Oceania</option>
+    </select>
 
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  </form>
+</div>
+<a href="pagina9.html"><input type="submit" value="Submit">
+</a>
+<br><br><br><br><br><br><br><br>
 
-
-
-
-
-
-
-  
+<div class="footer">
+<p>
+<table>
+<tr class="biggie">
+<td>Contact</td>
+<td>References</td>
+</tr>
+<tr>
+<td>work mail:<a href="mailto:117591@vituscollege.nl">117591@vituscollege.nl </a></td>
+<td>W3schools.com</td>
+</tr>
+<tr>
+<td>number: +31 0639663704</td>
+<td>CSS References</td>
+</tr>
+<tr>
+<td>...</td>
+<td>HTML Reference</td>
+</tr>
+</table>
+</p>
+</div>
