--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</p>
         <h1>1. McLaren 750S:
 		<br>
-		made in 2023</h1>
+		gemaakt in 2023</h1>
 		<p>
 		   <a href="pagina2.html">
            <img class="page-image" src="resources/auto2.webp" alt="McLaren 750s">
@@ -20,7 +20,7 @@
     </body>
 	<p class="spacer2">
 	</p>
-	<h1>2. Porsche 911 GT3 RS <br> Made in 2003</h1>
+	<h1>2. Porsche 911 GT3 RS <br> gemaakt in 2003</h1>
 	<p>
 		   <a href="pagina3.html">
            <img class="page-image" src="resources/auto3.webp" alt="Porsche GT3 RS">
@@ -28,7 +28,7 @@
 		</p>
 <p class="spacer3">
 	</p>		
-	<h1>3. Lamborghini Revuelto <br> Made in 2024</h1>
+	<h1>3. Lamborghini Revuelto <br> gemaakt in 2024</h1>
 	<p>
 		   <a href="pagina4.html">
            <img class="page-image" src="resources/auto4.webp" alt="lamborghini revuelto">
@@ -36,14 +36,14 @@
 		</p> 
 <p class="spacer4">
 	</p>		
-	<h1>4. Ferrari SF90<br> Made in 2019</h1>
+	<h1>4. Ferrari SF90<br> gemaakt in 2019</h1>
 	<p>
 		   <a href="pagina5.html">
            <img class="page-image" src="resources/auto5.webp" alt="lamborghini revuelto">
 		   </a>
 		   <p class="spacer4">
 	</p>		
-	<h1>5. Maserati MC20<br> Made in 2020</h1>
+	<h1>5. Maserati MC20<br> gemaakt in 2020</h1>
 	<p>
 	<a href="pagina6.html">
            <img class="page-image" src="resources/auto8.webp" alt="lamborghini revuelto">
@@ -56,29 +56,29 @@
 <br>
 <br>
 <br>
-<h1>write a comment</h1
+<h1>schrijf een comment</h1
 <div class="container">
   <form action="action_page.php">
 
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="fname">Voornaam</label>
+    <input type="text" id="fname" name="firstname" placeholder="jouw naam..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="lname">Achternaam</label>
+    <input type="text" id="lname" name="lastname" placeholder="jouw achternaam..">
 
     <label for="country">Continent</label>
     <select id="country" name="country">
-	  <option value="africa">Africa</option>
+	  <option value="afrika">Afrika</option>
 	  <option value="antarctica">Antarctica</option>
-      <option value="asia">Asia</option>
-      <option value="europe">Europe</option>
-	  <option value="north america">North America</option>
-	  <option value="south-america">South-America</option>
-      <option value="oceania">Oceania</option>
+      <option value="asië">Azië</option>
+      <option value="europa">Europa</option>
+	  <option value="noord-amerika">Noord-Amerika</option>
+	  <option value="zuid-amerika">Zuid-Amerika</option>
+      <option value="oceanië">Oceanië</option>
     </select>
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <label for="subject">Onderwerp</label>
+    <textarea id="subject" name="subject" placeholder="Schrijf iets.." style="height:200px"></textarea>
   </form>
 </div>
 <a href="pagina9.html"><input type="submit" value="Submit">
@@ -93,15 +93,15 @@
 <td>References</td>
 </tr>
 <tr>
-<td>work mail:<a href="mailto:117591@vituscollege.nl">117591@vituscollege.nl </a></td>
-<td>W3schools.com</td>
+<td>school mail:<a href="mailto:117591@vituscollege.nl">117591@vituscollege.nl </a></td>
+<td><a href="https://www.w3schools.com">W3schools.com </a></td>
 </tr>
 <tr>
-<td>number: +31 0639663704</td>
+<td>nummer: +31 0612345678</td>
 <td>CSS References</td>
 </tr>
 <tr>
-<td>...</td>
+<td>gemaakt door Jesse Maters</td>
 <td>HTML Reference</td>
 </tr>
 </table>
