--- a/pagina3.html
+++ b/pagina3.html
@@ -5,32 +5,37 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
 	<body>
-		<h1>2. Porsche 911 GT3 RS:</br>made in 2003</h1>
+		<h1>2. Porsche 911 GT3 RS:</br>gemaakt in 2003</h1>
 		<p>
 			<a href="index.html">
            <img class="page-image2" src="resources/auto3.webp" alt="Porsche 911 GT3 RS">
 		   </a>
 		</p> 
 		<p class="stukje-tekst2">
-		How powerful and fast is the new 911 GT3 RS?
+		Hoe krachtig en snel is de nieuwe 911 GT3 RS?
 		<br>
 		<br>
-The 911 GT3 RS quickens the pulse like very little else can. You are catapulted by the 4.0-litre, high-revving, naturally aspirated 525PS engine from 0-100km/h in just 3.2 seconds. With up to 465Nm of torque available to you, you’ll barely have time to draw breath as you make extraordinarily rapid progress through the gears. Top speed is a dizzying 296km/h. Its lightweight stainless steel sports exhaust system ensures a dramatic, unfiltered sound experience up to a maximum of 9,000rpm. With 860kg of downforce at 285km/h – a speed reached on the Nürburgring’s Döttinger straight – coupled with the Porsche Doppelkupplung (PDK) seven-speed automatic gearbox, acceleration and grip is at levels that constantly enthral and entertain.
+De 911 GT3 RS versnelt de hartslag zoals weinig anders dat kan. U wordt door de 4,0-liter, hoogtoerige, atmosferische motor van 525 pk in slechts 3,2 seconden van 0 naar 100 km/u gekatapulteerd. Met een koppel tot 465 Nm heeft u nauwelijks tijd om adem te halen terwijl u buitengewoon snel door de versnellingen schakelt. De topsnelheid bedraagt een duizelingwekkende 296 km/u. Het lichtgewicht roestvrijstalen sportuitlaatsysteem zorgt voor een dramatische, ongefilterde geluidservaring tot maximaal 9.000 tpm. Met 860 kg aan neerwaartse kracht bij 285 km/u – een snelheid die wordt bereikt op het rechte stuk van de Nürburgring in Döttinger – in combinatie met de Porsche Doppelkupplung (PDK) zeventraps automatische versnellingsbak, zijn de acceleratie en grip op niveaus die voortdurend boeien en entertainen.
 <br>
 <br>
-What’s the difference between the 911 GT3 and the 911 GT3 RS?
+Wat is het verschil tussen de 911 GT3 en de 911 GT3 RS?
 <br>
 <br>
-The 911 GT3 and 911 GT3 RS are cars that have both been developed to make every second count, but that RS suffix – standing for ‘Rennsport’ or ‘racing’ – signals the intentions of the 911 GT3 RS from the moment you see it written along its flanks. It takes a mere glance to recognise the wider body and huge rear wing – which rises even above the roofline of the car. An imposing, sporty look. Designed to push things harder and for longer when you are on the track, with 15PS more available to you, and a wealth of aerodynamic detailing, it all adds up to triple the downforce when compared to the External icon911 GT3. This is a serious track day vehicle. No compromises have been made.
-
-So how does it really feel when driving the 911 GT3 RS in its natural habitat – the racetrack? “It’s a racecar driver’s dream come true,” says Porsche test driver Jörg Bergmeister. “All this makes it the best-handling 911 road car ever on a racetrack. It’s so much fun, especially in the high-speed corners – the performance is just amazing.”
+De 911 GT3 en 911 GT3 RS zijn auto's die beide zijn ontwikkeld om elke seconde te laten tellen, maar dat RS-achtervoegsel – wat staat voor 'Rennsport' of 'racing' – geeft de bedoelingen van de 911 GT3 RS aan vanaf het moment dat je het geschreven ziet staan langs zijn flanken. Met slechts één blik herkent u de bredere carrosserie en de enorme achtervleugel, die zelfs boven de daklijn van de auto uitsteekt. Een imposante, sportieve look. Ontworpen om dingen harder en langer te pushen als je op het circuit bent, met 15 pk meer tot je beschikking en een schat aan aerodynamische details, komt dit allemaal neer op een drievoudige downforce in vergelijking met de externe icon911 GT3. Dit is een serieuze trackday-auto. Er zijn geen compromissen gesloten. Hoe voelt het eigenlijk als je met de 911 GT3 RS in zijn natuurlijke omgeving – het circuit – rijdt? “Het is de droom van elke autocoureur die uitkomt”, zegt Porsche-testrijder Jörg Bergmeister. “Dit alles maakt hem tot de best sturende 911-straatauto ooit op een circuit. Het is zo leuk, vooral in de snelle bochten – de prestaties zijn gewoon geweldig.”
 <br>
 <br>
-Is the 911 GT3 RS a track car only?
+Is de 911 GT3 RS alleen een circuitauto?
 <br>
 <br>
-Wherever you go, it goes. The street-legal 911 GT3 RS is as happy on the road as the racetrack. Alongside its phenomenal performance, overall drivability has been improved, too. The electronic damping control system actively and continuously adjusts based on current road conditions and driving style. At low speeds, this system steers the rear wheels in the opposite direction to the front for increased agility, especially through bends. At high speeds, the rear wheels are steered in the same direction as the front for optimal stability – perfect for when it comes to overtaking on the racetrack. With this kind of all-round performance, the 911 GT3 RS proves itself to be an exceptionally versatile sportscar.
+Waar je ook gaat, het gaat. De straatlegale 911 GT3 RS is net zo gelukkig op de weg als op het circuit. Naast de fenomenale prestaties is ook de algehele rijeigenschappen verbeterd. Het elektronische dempingscontrolesysteem past zich actief en continu aan op basis van de huidige wegomstandigheden en rijstijl. Bij lage snelheden stuurt dit systeem de achterwielen in de tegenovergestelde richting van de voorkant voor meer wendbaarheid, vooral in bochten. Bij hoge snelheden worden de achterwielen in dezelfde richting gestuurd als de voorkant voor optimale stabiliteit – perfect voor als het om inhalen op het circuit gaat. Met dit soort allroundprestaties bewijst de 911 GT3 RS dat hij een uitzonderlijk veelzijdige sportwagen is.
 
 
 		<br>
