--- a/pagina4.html
+++ b/pagina4.html
@@ -5,18 +5,44 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
     <body>
-		<h1>3. Lamborghini Revuelto:</br>made in 2024</h1>
+		<h1>3. Lamborghini Revuelto:</br>gemaakt in 2024</h1>
 		<p>
 			<a href="index.html">
            <img class="page-image3" src="resources/auto4.webp" alt="Lamborghini Revuelto">
 		   </a>
 		</p> 
 		<p class="stukje-tekst3">
-		Hier schrijven we even een stukje over... </br>
+		OVERZICHT
+		<br>
+		<br>
+Vlak voor het 60-jarig jubileum van het merk onthulde Lamborghini Revuelto, de eerste HPEV (High Performance Electrified Vehicle) hybride supersportwagen. Met de Revuelto heeft Lamborghini een nieuwe maatstaf gevestigd op het gebied van prestaties, boordtechnologie en rijplezier. De ultieme sensatie van de Revuelto wordt bereikt dankzij een aandrijflijn die in totaal 1015 pk levert, waarbij het vermogen van een gloednieuwe 12-cilinder verbrandingsmotor wordt gecombineerd met drie elektromotoren met hoge dichtheid en een baanbrekende transversale e-versnellingsbak met dubbele koppeling. De kracht van hybridisatie wordt benut om prestaties en emoties naar een ongekend niveau te tillen. </br>
+		<br>
+		<br>
+		BUITENKANT
+		<br>
+		<br>
+De Revuelto eert de Lamborghini-traditie en luidt zelfs qua exterieurdesign een nieuw tijdperk in. Terwijl het silhouet van de auto de iconische enkele middellijn volgt, creëren de scherp gevormde lijnen en vloeiende negatieve radiussen een hightech vorm die de Revuelto onmiskenbaar in de nieuwe generatie Lamborghini-supercars plaatst. De iconische V12 wordt gevierd door volledig achterin te verschijnen.
+		<br>
+		<br>
+		INTERIEUR
+		<br>
+		<br>
+Het interieur van de Revuelto brengt het ‘Feel Like a Pilot’-concept tot zijn recht: eenvoudige volumes, symmetrie en een op de bestuurder gerichte aanpak maken de cockpit tot een empowerende plek voor de bestuurder. De futuristische omgeving creëert een naadloze verbinding tussen bestuurder en machine, terwijl exclusieve zeshoekige elementen de dubbele missie vervullen: het oproepen van modellen uit het verleden en het benadrukken van gloednieuwe functionele kenmerken.
+		<br>
 		<br>
 		<br>
 		<a href="index.html"><h3>Terug naar de home-page</h3></a>
 		</p>
     </body>
 </html>
+
+
+
