--- a/pagina5.html
+++ b/pagina5.html
@@ -5,15 +5,49 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
     <body>
-		<h1>4. Ferrari SF90:</br>made in 2019</h1>
+		<h1>4. Ferrari SF90:</br>gemaakt in 2019</h1>
 		<p>
 			<a href="index.html">
            <img class="page-image4" src="resources/auto5.webp" alt="Lamborghini Revuelto">
 		   </a>
 		</p> 
 		<p class="stukje-tekst4">
-		Hier schrijven we even een stukje over... 
+		Motoren
+		<br>
+		<br>
+Er is maar één motor te krijgen in de Ferrari SF90 Stradale: een plug-in hybride combinatie van een 4 liter grote biturbo-V8 die achter de passagierscel zit en extreem laag is ingebouwd, en een 220 pk sterke elektromotor op de vooras, die wordt gevoed door een 7,9 kWh grote batterij, waarmee hij tot 25 km puur elektrisch kan rijden tot aan een snelheid van 135 km/u. Met zijn systeemvermogen van 1.000 pk is de SF90 de krachtigste Ferrari ooit, en ook de snelst optrekkende met een sprint van 0-100 km/u in 2,5 seconden. De topsnelheid is 340 km/u volgens Ferrari.
+<br>
+<br>
+Een leuk weetje: in elektrische modus is deze Ferrari SF90 Stradale dus een voorwielaandrijver. Ook is er geen echte versnelling achteruit op de 8-trapsautomaat met dubbele koppeling, achteruit rijden doe je altijd met de elektromotor.
+<br>
+<br>
+Afmetingen
+<br>
+<br>
+De Ferrari SF90 Stradale is 4,71 meter lang, 1,97 meter breed en 1,19 meter hoog. Het is een strikte tweezitter, in tegenstelling tot sommige andere Ferrari’s is er ook geen opbergruimte achter de stoelen. Je moet het dus doen met de amper 74 liter grote koffer voorin, die kleiner is dan de andere V8-modellen van Ferrari door de plaatsing van de batterij. Met een leeggewicht van ongeveer 1,6 ton is de SF90 ook zo’n 150 kilo zwaarder dan de F8 Tributo.
+		<br>
+		<br>
+		Design
+		<br>
+		<br>
+Exterieur
+<br>
+<br>
+De Ferrari SF90 Stradale is niet enkel de eerste plug-in hybride van Ferrari, het is ook het eerste model van het merk met het nieuwe design van het merk, dat afscheid neemt van de ronde achterlichten en de grote lichtblokken vooraan. De neus heeft erg scherpe koplampen gekregen en achteraan zijn de lichten nu rechthoekig. Ondanks het feit dat de basisvorm vrij gelijkaardig is aan die van de F8 Tributo, speelt de SF90 met contrasterende panelen en vormen om hem een veel modernere look te geven. De Assetto Fiorano krijgt ook historisch geïnspireerde racestrepen - als je ervoor betaalt.
+<br>
+<br>
+Interieur
+<br>
+<br>
+Aan boord heerst er ook een moderner sfeertje dan wat we gewend waren van Ferrari, al is dit design alweer voorbijgestreefd door de Roma. We zien wel de aanraakgevoelige toetsen op het stuur en op de andere bedieningspanelen. Zoals typisch bij Ferrari, zitten de meeste bedieningselementen op het stuurwiel, om je handen er bijna nooit van te moeten halen. De centrale toerenteller lijkt analoog, maar is digitaal en verandert in een vermogensmeter in de elektrische modus.
 		<br>
 		<br>
 		</br>
