--- a/pagina6.html
+++ b/pagina6.html
@@ -4,15 +4,43 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
     <body>
-		<h1>5. Maserati MC20:</br>made in 2020</h1>
+		<h1>5. Maserati MC20:</br>gemaakt in 2020</h1>
 		<p>
 			<a href="index.html">
            <img class="page-image4" src="resources/auto8.webp" alt="Lamborghini Revuelto">
 		   </a>
 		</p> 
 		<p class="stukje-tekst5">
-		Hier schrijven we even een stukje over... 
+		The new super sports car
+		<br>
+		<br>
+De Maserati MC20 (Maserati Corse 2020) luidt een nieuw tijdperk in. Als geen ander weet deze auto prestaties, sportiviteit en luxe te combineren tot één geheel. De nieuwe supersportauto heeft een ongelofelijke aerodynamische efficiëntie en een sportief rijgevoel waar je kippenvel van krijgt. De compleet nieuwe Nettuno-motor levert een acceleratie van 0-100 km/u binnen 2,9 seconden. De MC20 is een extreem lichte auto van minder dan 1.500 kilogram. Gecombineerd met het vermogen, maakt dit dat de MC20 de beste uit zijn klasse is wat betreft gewicht/vermogen. De MC20 is dé auto waar Maserati zich mee laat horen. 
+		<br>
+		<br>
+		The beating heart of the MC20
+		<br>
+		<br>
+De MC20 is voorzien van een compleet nieuwe motor; de Nettuno. Deze motor wordt beschermd door internationale patenten en is gebouwd door een team van hooggekwalificeerde technici en ingenieurs. De techniek is afgeleid van de Formule 1- techniek. De 3.0-liter 6-cilinder twin-turbo heeft een V90°-architectuur en is voorzien van een dry-sumpsysteem. De motor levert een vermogen van 630 pk bij 7.500 tpm en 730 Nm koppel vanaf 3.000 tpm met een specifiek vermogen van 210 pk/liter.
+		<br>
+		<br>
+		Lightning-fast feather-light
+		<br>
+		<br>
+Voor het eerst bezit een Maserati een carbon fiber monocoque. Door de lichte carrosserie van de MC20 zorgt dit voor een perfecte verhouding tussen vermogen en gewicht. Het resultaat is een adembenemende acceleratie en topsnelheid. De monocoque is ontworpen voor de drie types van de MC20 die de komende jaren zullen verschijnen; de coupé, de convertible en de toekomstige elektrische versie. De focus van de monocoque bij de coupé ligt op een laag gewicht en prestaties.
+		<br>
+		<br>
+		Engineered to perfection
+		<br>
+		<br>
+Bij een supercar van Italiaanse makelaardij zijn details net zo belangrijk als het geheel. Van de verschillende soorten velgen tot de mogelijkheid om te kiezen uit vier pakketten, deze Maserati is tot in detail geweldig.
 		<br>
 		<br>
 		</br>
