--- a/pagina7.html
+++ b/pagina7.html
@@ -4,12 +4,20 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
     <body>
-	<h1>portofolie</h1>
+	<h1>portofolio</h1>
 	<p class="portifolie">
 	</p>
 		<p class="stukje-tekst6">
-		Hier schrijven we even een stukje over... 
+		Ik ben Jesse Maters en ik ben 15 jaar oud en ben geboren op 15 januari 2009. Ik woon in Nederland in het groote dorp Bussum. Ik zit op het sint-Vituscollege en doe daar Vwo. mijn hobbies zijn voetballen
+		, kickboksen, dingen ontwerpen en met me vrienden afspreken. Dit website was een project van informatica en het was ook me eerste 
+		project en ook de eerste keer dat ik met code's aan de slag ging. ik vond het een leuk project en zou er graag meer mee willen doen.
 		<br>
 		<br>
 		</br>
