--- a/pagina2.html
+++ b/pagina2.html
@@ -5,35 +5,38 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">	
     </head>
+			<body>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
+</body>
     <body>
-		<h1>1. McLaren 750S:</br>made in 2023</h1>
+		<h1>1. McLaren 750S:</br>gemaakt in 2023</h1>
 		
 		<p>
 			<a href="index.html">
-           <img class="page-image4" src="resources/auto2.webp" alt="McLaren 750s">
+           <img class="page-image" src="resources/auto2.webp" alt="McLaren 750s">
 		   </a>
 		</p> 
 		<p class="stukje-tekst">
-		The 750S really does set a new benchmark
+		De 750S zet echt een nieuwe maatstaf
 		<br>
 		<br>
-		Enhanced engagement. Greater performance. Refined aerodynamics. Upgraded technology...Every aspect of 750S has been scrutinised and improved. Inside and out. Our relentless search for better can be felt in each core element.
-
-Sublime agility, nuanced feedback, exceptional comfort and usability combine to provide an uncompromised supercar that delivers the purest possible driving experience. A definitively new benchmark.
+Verbeterde betrokkenheid. Betere prestaties. Verfijnde aerodynamica. Verbeterde technologie...Elk aspect van de 750S is nauwkeurig onderzocht en verbeterd. Binnen en buiten. Onze meedogenloze zoektocht naar beter is voelbaar in elk kernelement. Sublieme wendbaarheid, genuanceerde feedback, uitzonderlijk comfort en gebruiksgemak zorgen samen voor een compromisloze supercar die de puurst mogelijke rijervaring biedt. Een definitief nieuwe benchmark.
 <br>
 <br>
-PURER ENGAGEMENT
+ZUIVERE BETROKKENHEID
 <br>
 <br>
-The 750S takes the mind-bending performance, telepathic handling and lightning responses of the McLaren 720S further. Towards the point where car and driver work as one. From flat-out circuits. To sinuous A-roads. The McLaren ethos drives a constant search for more performance. Less weight. And perfectly judged balance. The objective is deceptively simple in its ambition: class-leading, addictive engagement.
-
-30HP more power and 30Nm more than 720S torque play their part. So does 30kg less overall weight. And a 6mm front wider track, twin valve dampers, a quicker steering rack and 15% shorter final drive. As revs rise and the new Standard Sports Exhaust howls, you'll soon understand what a new benchmark in engagement really means.
+De 750S tilt de verbijsterende prestaties, het telepathische rijgedrag en de bliksemsnelle reacties van de McLaren 720S naar een hoger niveau. Op weg naar het punt waarop auto en bestuurder als één geheel samenwerken. Van platte circuits. Naar bochtige A-wegen. Het McLaren-ethos drijft een constante zoektocht naar meer prestaties. Minder gewicht. En perfect beoordeelde balans. Het doel is bedrieglijk eenvoudig qua ambitie: toonaangevende, verslavende betrokkenheid. 30 pk meer vermogen en 30 Nm meer koppel dan het 720S-koppel spelen hun rol. Dat geldt ook voor 30 kg minder totaalgewicht. En een 6 mm grotere spoorbreedte aan de voorkant, dubbele klepdempers, een sneller stuurhuis en een 15% kortere eindoverbrenging. Terwijl het toerental stijgt en de nieuwe standaardsportuitlaat brult, zul je snel begrijpen wat een nieuwe maatstaf op het gebied van betrokkenheid werkelijk betekent.
 <br>
 <br>
-Torrential power
+Torrentiële kracht
 <br>
 <br>
-At the heart of the 750S is a 4-litre twin-turbocharged V8 engine. Mid mounted for perfect weight distribution. Iconic McLaren engineering and architecture. Enhanced with new components and bespoke calibration. This powerhouse generates 750PS and 800Nm of torque. Evolutionary progress you can feel.
+Het hart van de 750S wordt gevormd door een 4-liter V8-motor met dubbele turbocompressor. Midden gemonteerd voor een perfecte gewichtsverdeling. Iconische McLaren-techniek en -architectuur. Verbeterd met nieuwe componenten en op maat gemaakte kalibratie. Deze krachtpatser genereert 750 pk en 800 Nm koppel. Evolutionaire vooruitgang die je kunt voelen.
 <br>
 <br>		
 		</br>
