--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<h1>Top 5 Sportcars 2024</h1>
 		<p class="spacer">
 		</p>
+			<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="pagina7.html">Portofolio</a></li>
+  <li><a href="https://www.bbc.com/news">news</a></li>
+</ul>
         <h1>1. McLaren 750S:
 		<br>
 		gemaakt in 2023</h1>
